# aws-config-rdk

./: .bandit.yaml  .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitlint  .readthedocs.yaml  .readthedocs.yaml.off  .safety-project.ini  MANIFEST.in  Makefile  NEW_RUNTIME_PROCESS.md  NOTICE.txt  Pipfile  README.md  README.rst  developer_notes.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sonar-project.properties  supported_resource_types.yaml  test-region.yaml  twine.pypirc  update_rdklib_versions.py
.github/: get_config_supported_resources.py
.github/actions/dep-setup/: action.yml
.github/workflows/: ci.yml  publish.yaml  validate.yaml
MacLinux/: README.txt
MacLinux/rules/: createRule  evaluateRuleAndGetLogs  test
MacLinux/rules/ruleCode/: ruleParameters.txt  rule_code.py  rule_util.py
MacLinux/rules/ruleUtil/: configRule.json  lambdaTrustPolicy.json
MacLinux/setup/: deliveryPermissionsPolicy.json  setup
MacLinux/test/: test
MacLinux/test/testUtil/: output.txt  testEvent.json
MyRule/: parameters.json
Windows/: README.txt
Windows/rules/: createRule.cmd  evaluateRuleAndGetLogs.cmd  test.cmd
Windows/rules/ruleCode/: rule_code.py  rule_util.py
Windows/rules/ruleUtil/: configRule.json  executeZip.vbs  lambdaTrustPolicy.json
Windows/setup/: deliveryPermissionsPolicy.json  setup.cmd  setupConfig.cmd
Windows/test/: test.cmd
Windows/test/testUtil/: testEvent.json
add-ons/config-opscenter-integration-example/: s3EncryptedConfigRule.yaml
cdk.out/: CdkStack.assets.json  CdkStack.template.json  manifest.json  tree.json
cdk/cdk/: cdk_stack.py
docs/: Makefile  conf.py  deploy.sh  faq.md  getting_started.rst  index.md  index.rst  install.md  introduction.rst  legacy-docs.md  make.bat  references.rst  remediation.md  requirements.txt  writing-test-units.md
docs/Creating and editing rules/: Creating rules.md  Modifying rules.md
docs/Creating and editing rules/RDK Lambda function/: Lambda functions logic.md
docs/_static/: argparse.css
docs/advanced-features/: cross-Account-deployments.md  custom-lambda-name.md  disable-resource-check.md  generate-lambda-layer.md  managed-rules.md  multi-region-deployment.md  rulesets.md
docs/commands/: clean.md  create-rule-template.md  create.md  deploy.md  export.md  init.md  logs.md  modify.md  rulesets.md  sample-ci.md  test-local.md  undeploy.md
docs/reference/: clean.rst  create-rule-template.rst  create.rst  deploy.rst  export.rst  init.rst  logs.rst  modify.rst  rulesets.rst  sample-ci.rst  test-local.rst  undeploy.rst
docs/rule-management/: creating-rules.md  deploy-rules.md  modifying-rules.md  writing-unit-tests.md
docs/rule-management/rdk-lambda-function/: lambda-function-logic.md  writing-an-evaluate_compliance-function.md
docs/usage/: getting-started.md
integration/config-opscenter-integration-example/: AWS_Config_and_OpsCenter.xml  README.md  build.sh  cleanup.sh  opsitem-role.yaml  s3EncryptedConfigRule.yaml
mybadfeelingtest/: parameters.json
mybftest2/: parameters.json
policy/: rdk-minimum-permissions.json
rag/lambda-python/: handler.py
rag/terraform/: README.md  data.tf  main.tf  outputs.tf  providers.tf  variables.tf
rdk/: .~c9_invoke_6jHgdl.py  .~c9_invoke_ylFGcc.py  __init__.py  __main__.py  _export.py  cli.py  rdk.py  rdklib_versions.yaml  supported_resource_types.yaml
rdk-workshop/: WorkshopSetup.yaml  instructions.md
rdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rdk/cli/: __init__.py  main.py
rdk/cli/commands/: __init__.py  clean.py  create.py  create_rule_template.py  deploy.py  deploy_organization.py  destroy.py  init.py  sample_ci.py  test.py  undeploy.py
rdk/core/: errors.py  get_accepted_resource_types.py  rules_deploy.py  rules_test.py  sample_ci.py
rdk/frameworks/cdk/: app.py  requirements.txt
rdk/runners/: base.py  cdk.py  cfn_guard.py
rdk/template/: configCfnGuardRule.yaml  configCfnGuardRuleOrganization.yaml  configManagedRule.json  configManagedRule.yaml  configManagedRuleOrganization.json  configManagedRuleOrganization.yaml  configManagedRuleWithRemediation.json  configManagedRuleWithRemediation.yaml  configRole.json  configRule.json  configRule.yaml  configRuleAssumeRolePolicyDoc.json  configRuleOrganization.json  configRuleOrganization.yaml  deliveryPermissionsPolicy.json  test_event_template.yaml
rdk/template/example_ci/: AWS_ACM_Certificate.json  AWS_ApiGatewayV2_Api.json  AWS_ApiGatewayV2_Stage.json  AWS_ApiGateway_RestApi.json  AWS_ApiGateway_Stage.json  AWS_AutoScaling_AutoScalingGroup.json  AWS_AutoScaling_LaunchConfiguration.json  AWS_AutoScaling_ScalingPolicy.json  AWS_AutoScaling_ScheduledAction.json  AWS_CLOUDFRONT_DISTRIBUTION.json  AWS_CLOUDFRONT_STREAMINGDISTRIBUTION.json  AWS_CloudFormation_Stack.json  AWS_Cloudtrail_Trail.json  AWS_CodeBuild_Project.json  AWS_CodePipeline_Pipeline.json  AWS_DynamoDB_Table.json  AWS_EC2_CapacityReservation.json  AWS_EC2_FlowLog.json  AWS_EC2_Host.json  AWS_EC2_Instance.json  AWS_EC2_LaunchTemplate.json  AWS_EC2_NatGateway.json  AWS_EC2_NetworkAcl.json  AWS_EC2_RouteTable.json  AWS_EC2_VPCPeeringConnection.json  AWS_EC2_VPNGateway.json  AWS_ECR_PublicRepository.json  AWS_ECR_Repository.json  AWS_ECS_TaskDefinition.json  AWS_EKS_Cluster.json  AWS_ELASTICLOADBALANCING_LOADBALANCER.json  AWS_ElasticBeanstalk_Application.json  AWS_ElasticBeanstalk_ApplicationVersion.json  AWS_ElasticBeanstalk_Environment.json  AWS_ElasticLoadBalancingV2_Listener.json  AWS_ElasticSearch_Domain.json  AWS_Glue_Classifier.json  AWS_Glue_Job.json  AWS_Glue_MLTransform.json  (+22 more)
rdk/utils/: logger.py
rdk_module/: config_rule.tf  data.tf  variables.tf
testing/: check_generated_lambda_layers_test.py  copy-to-s3-buildspec.yaml  copy_to_s3.sh  linux-python2-buildspec.yaml  linux-python3-buildspec.yaml  multi_region_execution_test.py  partition_test.py  regional_test.py  regional_test.sh  test_windows.sh  win_multi_region_execution_test.py  windows-python2-buildspec.yaml  windows-python3-buildspec.yaml
tests/unit/: conftest.py  test_pkg_metadata.py
(+188 files in other folders)
