#    Copyright 2023 Amazon.com, Inc. or its affiliates. All Rights Reserved.
#
#    Licensed under the Apache License, Version 2.0 (the "License"). You may not use this file except in compliance with the License. A copy of the License is located at
#
#        http://aws.amazon.com/apache2.0/
#
#    or in the "license" file accompanying this file. This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
[tool.poetry]
name = "rdk"
version = "0.11.0"
description = "Rule Development Kit CLI for AWS Config"
authors = [
    "AWS RDK Maintainers <rdk-maintainers@amazon.com>",
]
repository = "https://github.com/awslabs/aws-config-rdk"
homepage = "https://github.com/awslabs/aws-config-rdk"
readme = "README.rst"
packages = [{include = "rdk"}]
keywords = ["amazon", "aws", "awslabs", "rdk", "config", "rules", "compliance"]
documentation = "https://aws-config-rdk.readthedocs.io"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = [
    "README.rst",
    "NOTICE.txt",
    "LICENSE",
    "rdk/template/*",
    "rdk/template/terraform/*",
    "rdk/template/terraform/0.11/*",
    "rdk/template/terraform/0.12/*",
    "rdk/template/example_ci/*",
    "rdk/template/runtime/*",
    "rdk/template/runtime/java8/*",
    "rdk/template/runtime/java8/jars/*",
    "rdk/template/runtime/java8/src/main/java/com/rdk/*",
    "rdk/template/runtime/nodejs4.3/*",
    "rdk/template/runtime/python3.7/*",
    "rdk/template/runtime/python3.7-lib/*",
    "rdk/template/runtime/python3.8/*",
    "rdk/template/runtime/python3.8-lib/*",
    "rdk/template/runtime/python3.9/*",
    "rdk/template/runtime/python3.9-lib/*",
    "rdk/template/runtime/dotnetcore1.0/*",
    "rdk/template/runtime/dotnetcore1.0/bin/*",
    "rdk/template/runtime/dotnetcore1.0/obj/*",
    "rdk/template/runtime/dotnetcore1.0/obj/Debug/*",
    "rdk/template/runtime/dotnetcore1.0/obj/Release/netcoreapp1.0/*",
    "rdk/template/runtime/dotnetcore1.0/obj/Release/netcoreapp2.0/*",
    "rdk/template/runtime/dotnetcore2.0/*",
    "rdk/template/runtime/dotnetcore2.0/bin/*",
    "rdk/template/runtime/dotnetcore2.0/obj/*",
    "rdk/template/runtime/dotnetcore2.0/obj/Debug/*",
    "rdk/template/runtime/dotnetcore2.0/obj/Release/netcoreapp1.0/*",
    "rdk/template/runtime/dotnetcore2.0/obj/Release/netcoreapp2.0/*",
]
license = "Apache-2.0"

[tool.poetry.scripts]
rdk = "rdk.cli:main"

[tool.poetry.extras]
rdklib = ["rdklib"]

[tool.poetry.dependencies]
python = "^3.7.2"
boto3 = "^1.26.44"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
rdklib = "^0.3.0"
black = "^22.12.0"
pydocstyle = "^6.2.2"
isort = {extras = ["toml"], version = "^5.11.4"}
mypy = "^0.991"
pylint = "^2.15.9"

[tool.poetry.group.security.dependencies]
bandit = "^1.7.4"
safety = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
